refactor: remove explicit declaration of equals and hashcode for records class